--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "@heroicons/react": "^2.0.18",
         "@hookform/resolvers": "^3.3.1",
         "@material-tailwind/react": "^2.1.1",
+        "@react-oauth/google": "^0.11.1",
         "@reduxjs/toolkit": "^1.9.5",
         "@tailwindcss/forms": "^0.5.6",
         "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.48",
         "axios": "^1.5.0",
+        "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.46.1",
